[gd_scene load_steps=7 format=3 uid="uid://dp56pn13deodt"]

[ext_resource type="Script" uid="uid://ch22n0fd2v8ss" path="res://scripts/colour_swatch.gd" id="1_l5qnq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3tru1"]
bg_color = Color(0.25, 0.25, 0.25, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l5qnq"]
bg_color = Color(0.45, 0.45, 0.45, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l5qnq"]

[sub_resource type="Gradient" id="Gradient_5en4g"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.683891, 0.699088)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ua6yw"]
gradient = SubResource("Gradient_5en4g")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Colour_Swatch" type="PanelContainer"]
custom_minimum_size = Vector2(70, 70)
script = ExtResource("1_l5qnq")

[node name="Delete" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Move up a floor."
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_3tru1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l5qnq")
theme_override_styles/normal = SubResource("StyleBoxEmpty_l5qnq")
toggle_mode = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Swatch" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_ua6yw")
expand_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Label_Hex" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 10
text = "000000"
horizontal_alignment = 1

[node name="st" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 10
text = "st:"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label_Story" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 10
text = "01"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label_Name" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "Label Name"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="toggled" from="Delete" to="." method="_on_delete_toggled"]
